# wispr-flow-local

./: CHANGELOG.md  CLAUDE.md  DESIGN.md  GT-CASE-STUDY.md  README.md  REVIEW.md  audio.py  config.py  hotkey.py  injector.py  main.py  message-exchange.txt  overlay.py  postprocessor.py  pyproject.toml  requirements.txt  silence.py  state.py  transcriber.py  tray.py
.copilot/commands/: done.md  handoff.md  review.md
.github/hooks/: gastown.json
.prd-reviews/l2zts/: ambiguity.md  feasibility.md  missing-requirements.md  requirements.md  scope.md  stakeholders.md
.prd-reviews/local-voice-text/: prd-draft.md  prd-review.md  state.env
.runtime/: session_id
tests/: conftest.py  test_audio.py  test_config.py  test_hotkey.py  test_injector.py  test_main.py  test_overlay.py  test_postprocessor.py  test_silence.py  test_state.py  test_transcriber.py  test_tray.py
